Update intellij vmoptions